workspace-sf/force-app/main/default/objects/Territorio__c/Territorio__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro dos territórios dos produtos e das garantias</description>
    <label>Território</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territórios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>