workspace-sf/force-app/main/default/objects/Territorio__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <label>Município</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>