workspace-sf/force-app/main/default/objects/Territorio__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>