workspace-sf/force-app/main/default/objects/Territorio__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Regiões de comercialização</relationshipLabel>
    <relationshipName>TerritoriosProduto</relationshipName>
    <type>Lookup</type>
</CustomField>