workspace-sf/force-app/main/default/objects/Territorio__c/fields/Territorio__c.field-meta.xml
<CustomField>
    <fullName>Territorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Território</label>
    <referenceTo>Territorio__c</referenceTo>
    <relationshipLabel>Territórios</relationshipLabel>
    <relationshipName>Territorios</relationshipName>
    <type>Lookup</type>
</CustomField>