workspace-sf/force-app/main/default/objects/Territorio__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Globo terrestre</fullName>
            </value>
            <value>
                <fullName>Continente</fullName>
            </value>
            <value>
                <fullName>País</fullName>
            </value>
            <value>
                <fullName>Estado</fullName>
            </value>
            <value>
                <fullName>Município</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>