workspace-sf/force-app/main/default/objects/Territorio__c/recordTypes/GarantiaProdutoComercial.recordType-meta.xml
<RecordType>
    <fullName>GarantiaProdutoComercial</fullName>
    <active>true</active>
    <label>Garantia do Produto comercial</label>
</RecordType>