workspace-sf/force-app/main/default/objects/Territorio__c/recordTypes/GarantiaProdutoTecnico.recordType-meta.xml
<RecordType>
    <fullName>GarantiaProdutoTecnico</fullName>
    <active>true</active>
    <label>Garantia do Produto técnico</label>
</RecordType>